--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1356,4 +1356,45 @@ source "drivers/input/touchscreen/focaltech_touch/Kconfig"
 
 source "drivers/input/touchscreen/nt36xxx/Kconfig"
 
+
+config TOUCHSCREEN_FT5446
+       tristate "FocalTech touchscreens"
+       depends on I2C
+       help
+         Say Y here if you have a ft5446 touchscreen.
+         Ft5446 controllers are multi touch controllers which can
+         report 10 touches at a time.
+
+         If unsure, say N.
+
+         To compile this driver as a module, choose M here: the
+         module will be called ft5446_ts.
+
+source "drivers/input/touchscreen/ft5446/Kconfig"
+
+config TOUCHSCREEN_GT9XX
+       tristate "Goodix touchscreens"
+       depends on I2C
+       help
+         Say Y here if you have a GT9xx touchscreen.
+         GT9xx controllers are multi touch controllers which can
+         report 10 touches at a time.
+
+         If unsure, say N.
+
+         To compile this driver as a module, choose M here: the
+         module will be called GT9xx.
+
+source "drivers/input/touchscreen/gt9xx/Kconfig"
+
+config VITURALSAR
+	bool "Vitural Sar series"
+	depends on I2C
+	help
+	  Say Y here if you have a Goodix GT9xx touchscreen.
+	  Gt9xx controllers are multi touch controllers which can
+	  report 5 touches at a time.
+
+          If unsure, say N.
+
 endif
