--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -1863,6 +1863,11 @@ config XEN_DOM0
 	def_bool y
 	depends on XEN
 
+config YSL
+	bool "Based on Platform msm8917"
+	def_bool ARCH_MSM8917
+#end zhanghua 20170916
+
 config XEN
 	bool "Xen guest support on ARM"
 	depends on ARM && AEABI && OF
