--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -1054,6 +1054,11 @@ config XEN_DOM0
 	def_bool y
 	depends on XEN
 
+config YSL
+	bool "Based on Platform msm8917"
+	def_bool ARCH_MSM8917
+#end zhanghua 20170916
+
 config XEN
 	bool "Xen guest support on ARM64"
 	depends on ARM64 && OF
