drivers: input: touchscreen: snapshot interface to expose TP features

--- a/drivers/input/touchscreen/Makefile
+++ b/drivers/input/touchscreen/Makefile
@@ -119,3 +119,4 @@ obj-$(CONFIG_TOUCHSCREEN_FT5446)	+= ft5446/
 obj-$(CONFIG_VITURALSAR)		+= vituralsar_driver.o
 
 obj-$(CONFIG_MACH_XIAOMI_YSL)	+= lct_tp_fm_info.o
+obj-$(CONFIG_TOUCHSCREEN_COMMON)	+= tp_common.o
